--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 	<title>Trivia</title>
 </head>
 <body>
+	<div id="display"></div>
+	<script
+  src="https://code.jquery.com/jquery-3.1.1.min.js"
+  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  crossorigin="anonymous"></script>
 	<script src="assets/javascript/trivia.js"></script>
 </body>
 </html>
