Corrected number of questions and reset behavior

--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
 	<title>Trivia</title>
 	<link rel="stylesheet" href="assets/css/reset.css">
 	<link rel="stylesheet" href="assets/css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet">
 </head>
 <body>
-	<div id="display">Hey</div>
+	<div id="display">
+		<h1>Do you know chipmonks?</h1>
+		<div id="startRound"><h3>Start!</h3></div>
+	</div>
 	<script
   src="https://code.jquery.com/jquery-3.1.1.min.js"
   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
