--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<div id="display">
-		<h1>Do you know chipmonks?</h1>
+		<h1>Do you know chipmunks?</h1>
 		<div id="startRound"><h3>Start!</h3></div>
 	</div>
 	<script
